Fix: styling of scrollbars on firefox browser

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1158,19 +1158,19 @@ div:focus, span:focus, button:focus, input:focus {
 }
 
 #vue-frontend-app {
-    /* Scrollbar */
+    scrollbar-color: rgba(0,0,0,0.3) rgba(0,0,0,0.07);
+    scrollbar-width: thin !important;
+
     ::-webkit-scrollbar {
         width: 10px;
     }
 
-    /* Scrollbar Track */
     ::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
         -webkit-border-radius: 5px;
         border-radius: 5px;
     }
 
-    /* Scrollbar Handle */
     ::-webkit-scrollbar-thumb {
         -webkit-border-radius: 5px;
         border-radius: 5px;
